scroll window; cache accelerate

--- a/ui/window.ui
+++ b/ui/window.ui
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Generated with glade 3.38.2 -->
 <interface>
+
   <object class="GtkApplicationWindow" id="app_win">
     <property name="visible">True</property>
     <property name="can-focus">False</property>
     <property name="show-menubar">False</property>
     <child>
-      <object class="GtkTreeView" id="music_list">
+      <object class="GtkScrolledWindow" id="subpages_scrolled_window">
+        <child>
+          <object class="GtkTreeView" id="music_list">
+          </object>
+        </child>
       </object>
     </child>
   </object>
+
 </interface>
