--- a/ui/window.ui
+++ b/ui/window.ui
@@ -1,19 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Generated with glade 3.38.2 -->
 <interface>
-
   <object class="GtkApplicationWindow" id="app_win">
     <property name="visible">True</property>
     <property name="can-focus">False</property>
     <property name="show-menubar">False</property>
     <child>
-      <object class="GtkScrolledWindow" id="subpages_scrolled_window">
+      <object class="GtkBox">
+        <property name="orientation">vertical</property>
         <child>
-          <object class="GtkTreeView" id="music_list">
-            <property name="headers_visible">False</property>
-            <property name="valign">start</property>
-            <property name="can_focus">True</property>
-            <property name="visible">True</property>
+          <object class="GtkScrolledWindow" id="subpages_scrolled_window">
+            <property name="can-focus">False</property>
+            <property name="vexpand">True</property>
+            <child>
+              <object class="GtkTreeView" id="music_list">
+                <property name="headers_visible">False</property>
+                <property name="valign">start</property>
+                <property name="can-focus">True</property>
+                <property name="visible">True</property>
+                <property name="margin-top">8</property>
+                <property name="margin-bottom">8</property>
+                <child internal-child="selection">
+                  <object class="GtkTreeSelection"/>
+                </child>
+              </object>
+            </child>
+          </object>
+        </child>
+        <child>
+          <object class="GtkBox">
+            <child>
+              <object class="GtkButton" id="backward_button">
+                <property name="width_request">42</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="tooltip-text" translatable="yes">上一曲</property>
+                <property name="icon-name">media-skip-backward-symbolic</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkButton" id="pause_button">
+                <property name="width_request">60</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="tooltip_text" translatable="yes">播放</property>
+                <property name="icon-name">media-playback-pause-symbolic</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkButton" id="forward_button">
+                <property name="width_request">42</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="tooltip-text" translatable="yes">下一曲</property>
+                <property name="icon-name">media-skip-forward-symbolic</property>
+              </object>
+            </child>
           </object>
         </child>
       </object>
