--- a/ui/window.ui
+++ b/ui/window.ui
@@ -47,7 +47,7 @@
                     <property name="can-focus">False</property>
                     <property name="vexpand">True</property>
                     <child>
-                      <object class="GtkTreeView" id="bv_list">
+                      <object class="GtkTreeView" id="collectionlist">
                         <property name="headers_visible">False</property>
                         <property name="valign">start</property>
                         <property name="can-focus">True</property>
@@ -67,7 +67,7 @@
                     <property name="vexpand">True</property>
                     <property name="hexpand">True</property>
                     <child>
-                      <object class="GtkTreeView" id="music_list">
+                      <object class="GtkTreeView" id="playlist">
                         <property name="headers_visible">False</property>
                         <property name="valign">start</property>
                         <property name="can-focus">True</property>
