--- a/ui/window.ui
+++ b/ui/window.ui
@@ -54,6 +54,7 @@
                         <property name="visible">True</property>
                         <property name="margin-top">8</property>
                         <property name="margin-bottom">8</property>
+                        <property name="activate_on_single_click">True</property>
                         <child internal-child="selection">
                           <object class="GtkTreeSelection"/>
                         </child>
