--- a/ui/window.ui
+++ b/ui/window.ui
@@ -1,9 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk" version="4.0"/>
+
+  <object class="GtkPopover" id="popover-add">
+    <child>
+      <object class="GtkBox">
+        <property name="orientation">horizontal</property>
+        <child>
+          <object class="GtkEntry" id="bv_input">
+            <property name="width_request">200</property>
+            <style>
+              <class name="flat"/>
+            </style>
+          </object>
+        </child>
+        <child>
+          <object class="GtkButton" id="add_confirm">
+            <property name="label">确定</property>
+            <style>
+              <class name="flat"/>
+            </style>
+          </object>
+        </child>
+      </object>
+    </child>
+  </object>
+
   <object class="AdwApplicationWindow" id="app_win">
     <property name="visible">True</property>
     <property name="show-menubar">False</property>
+    <property name="width_request">1500</property>
+    <property name="height_request">800</property>
     <child>
 
       <object class="GtkBox">
@@ -14,47 +41,21 @@
           </object>
         </child>
 
-
         <child>
           <object class="GtkBox">
             <property name="orientation">horizontal</property>
             <property name="margin-top">4</property>
             <property name="margin-bottom">4</property>
             <child>
-              <object class="GtkButton" id="add-button">
+              <object class="GtkMenuButton" id="add-button">
                 <property name="width_request">42</property>
                 <property name="visible">True</property>
-                <property name="tooltip-text" translatable="yes">添加</property>
+                <property name="tooltip-text" translatable="yes">添加 BV 号</property>
                 <property name="icon-name">value-increase-symbolic</property>
+                <property name="popover">popover-add</property>
                 <style>
                   <class name="flat"/>
                 </style>
-              </object>
-            </child>
-            <child>
-              <object class="GtkPopover" id="bv-input">
-                <property name="width_request">137</property>
-                <child>
-                  <object class="GtkBox">
-                    <property name="orientation">horizontal</property>
-                    <child>
-                      <object class="GtkTextView">
-                        <property name="editable">True</property>
-                        <property name="cursor-visible">True</property>
-                        <style>
-                          <class name="flat"/>
-                        </style>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkButton">
-                        <style>
-                          <class name="flat"/>
-                        </style>
-                      </object>
-                    </child>
-                  </object>
-                </child>
               </object>
             </child>
           </object>
