--- a/ui/window.ui
+++ b/ui/window.ui
@@ -26,6 +26,10 @@
     </child>
   </object>
 
+  <object class="GtkAdjustment" id="seek-adjustment">
+    <property name="upper">1.0</property>
+  </object>
+
   <object class="AdwApplicationWindow" id="app_win">
     <property name="visible">True</property>
     <property name="show-menubar">False</property>
@@ -37,7 +41,7 @@
         <property name="orientation">vertical</property>
 
         <child>
-          <object class="AdwHeaderBar">
+          <object class="AdwHeaderBar" id="header">
           </object>
         </child>
 
@@ -147,6 +151,12 @@
                     <style>
                       <class name="flat"/>
                     </style>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkScale" id="seek">
+                    <property name="hexpand">True</property>
+                    <property name="adjustment">seek-adjustment</property>
                   </object>
                 </child>
               </object>
