--- a/ui/window.ui
+++ b/ui/window.ui
@@ -41,10 +41,6 @@
           <object class="GtkBox">
             <property name="orientation">vertical</property>
             <child>
-              <object class="AdwHeaderBar" id="header">
-              </object>
-            </child>
-            <child>
               <object class="GtkBox">
                 <property name="orientation">horizontal</property>
                 <property name="margin-top">4</property>
@@ -63,52 +59,18 @@
                 </child>
               </object>
             </child>
-            <child>
+            <child type="flap">
               <object class="PlayListView" id="playlist_view">
+                <property name="vexpand">true</property>
               </object>
             </child>
             <child>
               <object class="BiliBiliPlaybackControl" id="playback_ctl">
-                  <property name="valign">end</property>
-                  <property name="margin-top">6</property>
-                  <property name="margin-bottom">12</property>
+                <property name="halign">start</property>
+                <property name="margin-top">6</property>
+                <property name="margin-bottom">12</property>
               </object>
             </child>
-                <!--child>
-                  <object class="GtkBox">
-                    <property name="orientation">horizontal</property>
-                    <child>
-                      <object class="GtkScrolledWindow">
-                        <property name="hscrollbar-policy">never</property>
-                        <property name="vscrollbar-policy">automatic</property>
-                        <property name="propagate-natural-height">true</property>
-                        <property name="propagate-natural-width">true</property>
-                        <property name="max-content-width">400</property>
-                        <property name="vexpand">true</property>
-                        <property name="child">
-                          <object class="GtkTreeView" id="collectionlist">
-                            <property name="hover-selection">True</property>
-                            <property name="headers_visible">False</property>
-                            <property name="valign">start</property>
-                            <property name="margin-top">8</property>
-                            <property name="margin-bottom">8</property>
-                            <property name="margin-start">6</property>
-                            <property name="activate_on_single_click">True</property>
-                            <property name="hexpand">false</property>
-                            <style>
-                              <class name="navigation-sidebar"/>
-                            </style>
-                          </object>
-                        </property>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="PlayList" id="playlist">
-                      </object>
-                    </child>
-                  </object>
-                </child>-->
-                <!-- Playback controls -->
           </object>
         </child>
         <!--GtkWindowHandle child end-->
