--- a/ui/playlist.ui
+++ b/ui/playlist.ui
@@ -14,7 +14,7 @@
         <property name="child">
           <object class="GtkListView" id="queue_view">
             <property name="single-click-activate">true</property>
-            <property name="hexpand">false</property>
+            <property name="hexpand">true</property>
             <style>
               <class name="navigation-sidebar"/>
             </style>
