--- a/ui/queue-row.ui
+++ b/ui/queue-row.ui
@@ -17,6 +17,9 @@
                     <property name="xalign">0</property>
                     <property name="max-width-chars">35</property>
                     <property name="ellipsize">end</property>
+                    <style>
+                      <class name="song-title"/>
+                    </style>
                   </object>
                 </child>
                 <child>
@@ -24,6 +27,9 @@
                     <property name="xalign">0</property>
                     <property name="max-width-chars">35</property>
                     <property name="ellipsize">end</property>
+                    <style>
+                      <class name="song-artist"/>
+                    </style>
                   </object>
                 </child>
               </object>
@@ -34,10 +40,16 @@
           <object class="GtkStackPage">
             <property name="child">
               <object class="GtkBox">
+                <style>
+                  <class name="song-details"/>
+                </style>
                 <child>
                   <object class="GtkCheckButton" id="selected_button">
                     <property name="halign">center</property>
                     <property name="valign">center</property>
+                    <style>
+                      <class name="selection-mode"/>
+                    </style>
                   </object>
                 </child>
                 <child>
@@ -51,6 +63,9 @@
                         <property name="xalign">0</property>
                         <property name="max-width-chars">35</property>
                         <property name="ellipsize">end</property>
+                        <style>
+                          <class name="song-title"/>
+                        </style>
                       </object>
                     </child>
                     <child>
@@ -58,6 +73,9 @@
                         <property name="xalign">0</property>
                         <property name="max-width-chars">35</property>
                         <property name="ellipsize">end</property>
+                        <style>
+                          <class name="song-artist"/>
+                        </style>
                       </object>
                     </child>
                   </object>
@@ -72,6 +90,9 @@
               <object class="GtkLabel">
                 <property name="label" translatable="yes">Playing next</property>
                 <property name="xalign">0</property>
+                <style>
+                  <class name="currently-playing"/>
+                </style>
               </object>
             </property>
           </object>
